Fixed logout button on mobile

--- a/digivent-frontend/src/style/_variables.scss
+++ b/digivent-frontend/src/style/_variables.scss
@@ -138,7 +138,7 @@ $natural-light: #bdbdbd;
 }
 
 // Responsive size
-$medium: 768px;
+$medium: 600px;
 $large: 1024px;
 
 @mixin mobile {
